--- a/workflow.lipido/inst/shiny_app/www/workflow.lipido.css
+++ b/workflow.lipido/inst/shiny_app/www/workflow.lipido.css
@@ -2,15 +2,6 @@
 	width: 200px;
 	float: left;
 }
-.modal-lg {
-	width: 100%;
-} 
-.modal-sm {
-	width: 50%;
-}
-.selectize-dropdown-content {
-	max-height: 200px; 
-}
 .lds-dual-ring {
   display: inline-block;
   width: 200px;
@@ -95,19 +86,42 @@
 .bttn-no-fill>icon {
 	font-size: 40px;
 }
-.modal-dialog {
-	width: 100%;
-	min-width: 600px
-}
-.modal-body {
-    /* 100% = dialog height, 120px = header + footer */
-    max-height: 80vh;
-    overflow-y: scroll;
-}
 #introjs{
   border: none;
   background: none;
   color: white;
   font-size: 20px;
   margin: 4px;
+}
+.table-params {
+	width: 100%;
+	table-layout: fixed;
+}
+.table-params td{
+	width: 50%;
+	padding: 5px;
+	text-align: center;
+	vertical-align: bottom;
+}
+
+.tabbable {
+    padding-top: 20px;
+}
+.tabbable .tab-content {
+    padding-top: 20px;
+}
+#process_launch {
+    display: block;
+    margin: 0 auto;
+}
+#div_conversion_bttn {
+    margin: 0 auto;
+}
+.sF-modalContainer {
+    z-index: 1070;
+}
+.project_logo {
+    width: auto !important;
+    float: right !important;
+    background: none !important;
 }
